# ani-dl

./: .gitignore  Cargo.toml  README.md  TODO.md  package.json
assets/: main.css
src/: args.rs  downloader.rs  main.rs  structs.rs
src/scrapers/: download_page.rs  mod.rs  search_page.rs
templates/: index.html
