[package]
name = "ani-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
indicatif = { version = "0.17.7", features = ["tokio"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.0", features = ["full"] }
